--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-select": "^5.10.2",
+    "react-toastify": "^11.0.5",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
