--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "modern-normalize": "^3.0.1",
     "next": "16.1.6",
     "react": "19.2.3",
+    "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
